# sven

./: Cargo.toml  README.md  justfile  load_secrets.fish
shell/: load_secrets.bash  load_secrets.csh  load_secrets.fish  load_secrets.zsh
src/: crypto.rs  daemon.rs  db.rs  error.rs  main.rs
